--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <h1>Add Your Recipes!</h1>
-        <form id="recipe-form">
+        <form id="recipeForm">
             <input type="text" id="recipeName" placeholder="Recipe Name" required>
             <textarea id="recipeDesc" placeholder="Description" required></textarea>
             <input type="file" id="recipeImage" accept="image/*" required>
